自定义clash规则

--- a/Clash/config/自定义clash规则.ini
+++ b/Clash/config/自定义clash规则.ini
@@ -18,7 +18,8 @@ ruleset=📹 Youtube,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=⛩ Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🏕 DisneyPlus,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Disney/Disney.list
 ruleset=🏔 HboMax,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/HBO/HBO.list
-ruleset=🏝 PrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
+ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
 ruleset=🏖 Bahamult,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=🗽 Hulu,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Hulu/Hulu.list
 ruleset=🎶 NeteaseMusic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
@@ -45,7 +46,7 @@ custom_proxy_group=📹 Youtube`select`.*
 custom_proxy_group=⛩ Netflix`select`.*
 custom_proxy_group=🏕 DisneyPlus`select`.*
 custom_proxy_group=🏔 HboMax`select`.*
-custom_proxy_group=🏝 PrimeVideo`select`.*
+custom_proxy_group=🏝 AmazonPrimeVideo`select`.*
 custom_proxy_group=🏖 Bahamult`select`.*
 custom_proxy_group=🗽 Hulu`select`.*
 custom_proxy_group=📺 Bilibili`select`.*
