--- a/Clash/config/MyClashRule.ini
+++ b/Clash/config/MyClashRule.ini
@@ -20,6 +20,7 @@ ruleset=🏕 DisneyPlus,https://raw.githubusercontent.com/LYOyoo/ios_rule_script
 ruleset=🏔 HboMax,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
+ruleset=🎢 BiliBili,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list
 ruleset=🏖 Bahamult,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=🗽 Hulu,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Hulu/Hulu.list
 ruleset=🎶 NeteaseMusic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
@@ -47,6 +48,7 @@ custom_proxy_group=⛩ Netflix`select`.*
 custom_proxy_group=🏕 DisneyPlus`select`.*
 custom_proxy_group=🏔 HboMax`select`.*
 custom_proxy_group=🏝 AmazonPrimeVideo`select`.*
+custom_proxy_group=🎢 BiliBili`select`.*
 custom_proxy_group=🏖 Bahamult`select`.*
 custom_proxy_group=🗽 Hulu`select`.*
 custom_proxy_group=📺 Bilibili`select`.*
