--- a/Clash/config/MyClashRule.ini
+++ b/Clash/config/MyClashRule.ini
@@ -20,13 +20,12 @@ ruleset=🏕 DisneyPlus,https://raw.githubusercontent.com/LYOyoo/ios_rule_script
 ruleset=🏔 HboMax,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/HBO/HBO.list
 ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/AmazonPrimeVideo/AmazonPrimeVideo.list
 ruleset=🏝 AmazonPrimeVideo,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Amazon/Amazon.list
-ruleset=🎢 BiliBili,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/QuantumultX/BiliBili/BiliBili.list
 ruleset=🏖 Bahamult,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=🗽 Hulu,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Hulu/Hulu.list
 ruleset=🎶 NeteaseMusic,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/NetEaseMusic.list
 ruleset=🗼 Spotify,https://raw.githubusercontent.com/LYOyoo/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=📺 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
+ruleset=🎢 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+ruleset=🎢 Bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -48,10 +47,9 @@ custom_proxy_group=⛩ Netflix`select`.*
 custom_proxy_group=🏕 DisneyPlus`select`.*
 custom_proxy_group=🏔 HboMax`select`.*
 custom_proxy_group=🏝 AmazonPrimeVideo`select`.*
-custom_proxy_group=🎢 BiliBili`select`.*
 custom_proxy_group=🏖 Bahamult`select`.*
 custom_proxy_group=🗽 Hulu`select`.*
-custom_proxy_group=📺 Bilibili`select`.*
+custom_proxy_group=🎢 Bilibili`select`.*
 custom_proxy_group=🗼 Spotify`select`.*
 custom_proxy_group=🎶 NeteaseMusic`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]♻️ 自动选择`[]🚀 手动切换
